objects/Dealer_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>Additional_LPS_Candidate__c</fullName>
        <label>Additional LPS Candidate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Dealer_Name__r.ShippingStreet &amp;BR()&amp;
 Dealer_Name__r.ShippingCity &amp; &quot;, &quot;&amp; Dealer_Name__r.ShippingState &amp; &quot; &quot;&amp; Dealer_Name__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Points_Growth_Potential__c</fullName>
        <label>Annual Points Growth Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Points_Prior_Calendar_Year__c</fullName>
        <label>Annual Points Prior Calendar Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Tons_Growth_Potential__c</fullName>
        <label>Annual Tons Growth Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Great West</fullName>
                </value>
                <value>
                    <fullName>I-29 Dajota CBD</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Mid South Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>North Central</fullName>
                </value>
                <value>
                    <fullName>Northeast Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Pacific Coast</fullName>
                </value>
                <value>
                    <fullName>Red River Area</fullName>
                </value>
                <value>
                    <fullName>South Central</fullName>
                </value>
                <value>
                    <fullName>Southern Coast</fullName>
                </value>
                <value>
                    <fullName>Wisconsin CBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attitude__c</fullName>
        <label>Attitude</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_for_Additional_Stores__c</fullName>
        <label>Candidate for Additional Stores</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Brand_1__c</fullName>
        <label>Competitive Brand #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;M</fullName>
                </value>
                <value>
                    <fullName>Acco</fullName>
                </value>
                <value>
                    <fullName>Ace Hi</fullName>
                </value>
                <value>
                    <fullName>Ackey</fullName>
                </value>
                <value>
                    <fullName>Adm</fullName>
                </value>
                <value>
                    <fullName>Ag Choice (MFA)</fullName>
                </value>
                <value>
                    <fullName>Agland</fullName>
                </value>
                <value>
                    <fullName>Ag Lix</fullName>
                </value>
                <value>
                    <fullName>Agway</fullName>
                </value>
                <value>
                    <fullName>Ahrberg</fullName>
                </value>
                <value>
                    <fullName>Akey</fullName>
                </value>
                <value>
                    <fullName>Alaska Feed</fullName>
                </value>
                <value>
                    <fullName>Albright&apos;S Mill</fullName>
                </value>
                <value>
                    <fullName>American Feed</fullName>
                </value>
                <value>
                    <fullName>Armada</fullName>
                </value>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>Aslyn Finch</fullName>
                </value>
                <value>
                    <fullName>Assorted Brands</fullName>
                </value>
                <value>
                    <fullName>Banks Mlg</fullName>
                </value>
                <value>
                    <fullName>Bar G</fullName>
                </value>
                <value>
                    <fullName>Bartlett</fullName>
                </value>
                <value>
                    <fullName>Beaver</fullName>
                </value>
                <value>
                    <fullName>Big Gain</fullName>
                </value>
                <value>
                    <fullName>Big V</fullName>
                </value>
                <value>
                    <fullName>Blue Bonnet</fullName>
                </value>
                <value>
                    <fullName>Blue Seal</fullName>
                </value>
                <value>
                    <fullName>Bryant Grain</fullName>
                </value>
                <value>
                    <fullName>Buckeye</fullName>
                </value>
                <value>
                    <fullName>Burkmann</fullName>
                </value>
                <value>
                    <fullName>Caldwell Milling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Brand_2__c</fullName>
        <label>Competitive Brand #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;M</fullName>
                </value>
                <value>
                    <fullName>Acco</fullName>
                </value>
                <value>
                    <fullName>Ace Hi</fullName>
                </value>
                <value>
                    <fullName>Ackey</fullName>
                </value>
                <value>
                    <fullName>Adm</fullName>
                </value>
                <value>
                    <fullName>Ag Choice (MFA)</fullName>
                </value>
                <value>
                    <fullName>Agland</fullName>
                </value>
                <value>
                    <fullName>Ag Lix</fullName>
                </value>
                <value>
                    <fullName>Agway</fullName>
                </value>
                <value>
                    <fullName>Ahrberg</fullName>
                </value>
                <value>
                    <fullName>Akey</fullName>
                </value>
                <value>
                    <fullName>Alaska Feed</fullName>
                </value>
                <value>
                    <fullName>Albright&apos;S Mill</fullName>
                </value>
                <value>
                    <fullName>American Feed</fullName>
                </value>
                <value>
                    <fullName>Armada</fullName>
                </value>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>Aslyn Finch</fullName>
                </value>
                <value>
                    <fullName>Assorted Brands</fullName>
                </value>
                <value>
                    <fullName>Banks Mlg</fullName>
                </value>
                <value>
                    <fullName>Bar G</fullName>
                </value>
                <value>
                    <fullName>Bartlett</fullName>
                </value>
                <value>
                    <fullName>Beaver</fullName>
                </value>
                <value>
                    <fullName>Big Gain</fullName>
                </value>
                <value>
                    <fullName>Big V</fullName>
                </value>
                <value>
                    <fullName>Blue Bonnet</fullName>
                </value>
                <value>
                    <fullName>Blue Seal</fullName>
                </value>
                <value>
                    <fullName>Bryant Grain</fullName>
                </value>
                <value>
                    <fullName>Buckeye</fullName>
                </value>
                <value>
                    <fullName>Burkmann</fullName>
                </value>
                <value>
                    <fullName>Caldwell Milling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Brand_3__c</fullName>
        <label>Competitive Brand #3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;M</fullName>
                </value>
                <value>
                    <fullName>Acco</fullName>
                </value>
                <value>
                    <fullName>Ace Hi</fullName>
                </value>
                <value>
                    <fullName>Ackey</fullName>
                </value>
                <value>
                    <fullName>Adm</fullName>
                </value>
                <value>
                    <fullName>Ag Choice (MFA)</fullName>
                </value>
                <value>
                    <fullName>Agland</fullName>
                </value>
                <value>
                    <fullName>Ag Lix</fullName>
                </value>
                <value>
                    <fullName>Agway</fullName>
                </value>
                <value>
                    <fullName>Ahrberg</fullName>
                </value>
                <value>
                    <fullName>Akey</fullName>
                </value>
                <value>
                    <fullName>Alaska Feed</fullName>
                </value>
                <value>
                    <fullName>Albright&apos;S Mill</fullName>
                </value>
                <value>
                    <fullName>American Feed</fullName>
                </value>
                <value>
                    <fullName>Armada</fullName>
                </value>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>Aslyn Finch</fullName>
                </value>
                <value>
                    <fullName>Assorted Brands</fullName>
                </value>
                <value>
                    <fullName>Banks Mlg</fullName>
                </value>
                <value>
                    <fullName>Bar G</fullName>
                </value>
                <value>
                    <fullName>Bartlett</fullName>
                </value>
                <value>
                    <fullName>Beaver</fullName>
                </value>
                <value>
                    <fullName>Big Gain</fullName>
                </value>
                <value>
                    <fullName>Big V</fullName>
                </value>
                <value>
                    <fullName>Blue Bonnet</fullName>
                </value>
                <value>
                    <fullName>Blue Seal</fullName>
                </value>
                <value>
                    <fullName>Bryant Grain</fullName>
                </value>
                <value>
                    <fullName>Buckeye</fullName>
                </value>
                <value>
                    <fullName>Burkmann</fullName>
                </value>
                <value>
                    <fullName>Caldwell Milling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_1_Annual_Pts_Equivalent__c</fullName>
        <label>Competitor #1 Annual Pts Equivalent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_1_Annual_Tons__c</fullName>
        <label>Competitor #1 Annual Tons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_2_Annual_Pts_Equivalent__c</fullName>
        <label>Competitor #2 Annual Pts Equivalent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_2_Annual_Tons__c</fullName>
        <label>Competitor #2 Annual Tons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_3_Annual_Pts_Equivalent__c</fullName>
        <label>Competitor #3 Annual Pts Equivalent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_3_Annual_Tons__c</fullName>
        <label>Competitor #3 Annual Tons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_FIPS__c</fullName>
        <label>County FIPS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <label>County Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_of_LPS_Local_Hires__c</fullName>
        <label>Current # of LPS/Local Hires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DBS_Support_Needed__c</fullName>
        <label>DBS Support Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS__c</fullName>
        <label>DBS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albert Thomas</fullName>
                </value>
                <value>
                    <fullName>Elfigo Padilla</fullName>
                </value>
                <value>
                    <fullName>John Mareth</fullName>
                </value>
                <value>
                    <fullName>Kevin Huesman</fullName>
                </value>
                <value>
                    <fullName>Robert Sipiorski</fullName>
                </value>
                <value>
                    <fullName>Ronald Allison</fullName>
                </value>
                <value>
                    <fullName>Trent Ardrey</fullName>
                </value>
                <value>
                    <fullName>Suher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_AB__c</fullName>
        <formula>Dealer_Name__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer AB#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name_Display__c</fullName>
        <description>for use in SF1 display only</description>
        <formula>Dealer_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <description>Master-Detail to Dealer CoOp accounts.</description>
        <label>Dealer Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Account selected is not a Dealer CoOp Account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer-CoOp Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Segmentations</relationshipLabel>
        <relationshipName>Dealer_Segmentations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dealer_Total__c</fullName>
        <formula>(VALUE(TEXT(Attitude__c ))*3)+ (VALUE(TEXT(Feed_Focus__c ))*2) + VALUE(TEXT(Financial__c )) + VALUE(TEXT(Management__c ))+VALUE(TEXT( VIP_Points__c ))+VALUE(TEXT( Loyalty__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feed_Focus__c</fullName>
        <label>Feed Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial__c</fullName>
        <label>Financial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Time_LPS_Local_Hires__c</fullName>
        <label># Full Time LPS/Local Hires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>Dealer_Total__c + (VALUE(TEXT( Market_Potential__c ))*2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty__c</fullName>
        <label>Loyalty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Management__c</fullName>
        <label>Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Potential__c</fullName>
        <label>Market Potential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiple_Stores_Current_Locations__c</fullName>
        <label>Multiple Stores - Current # Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Competitive_Brand_1__c</fullName>
        <description>Other Competitive Brand</description>
        <label>Other Competitive Brand #1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitive_Brand_2__c</fullName>
        <description>Other Competitive Brand 2</description>
        <label>Other Competitive Brand #2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitive_Brand_3__c</fullName>
        <description>Other Competitive Brand 3</description>
        <label>Other Competitive Brand #3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Time_LPS_Local_Hires__c</fullName>
        <label># Part Time LPS/Local Hires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Served__c</fullName>
        <label>Percent Served</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>List of regions.</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southern</fullName>
                </value>
                <value>
                    <fullName>Upper Midwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Specialist2__c</fullName>
        <defaultValue>$User.FirstName  &amp; &quot; &quot; &amp;  $User.LastName</defaultValue>
        <description>Defaults to logged in user.</description>
        <label>Sales Specialist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>Dealer_Name__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <formula>Dealer_Name__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <formula>text(Dealer_Name__r.ShippingStateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip__c</fullName>
        <formula>Dealer_Name__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Account__c</fullName>
        <label>Split Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Competitive_Annual_Pts_Equivalent__c</fullName>
        <formula>Competitor_1_Annual_Pts_Equivalent__c + Competitor_2_Annual_Pts_Equivalent__c + Competitor_3_Annual_Pts_Equivalent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Competitive Annual Pts Equivalent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Competitive_Annual_Tons__c</fullName>
        <formula>Competitor_1_Annual_Tons__c + Competitor_2_Annual_Tons__c + Competitor_3_Annual_Tons__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Competitive Annual Tons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_Points__c</fullName>
        <label>VIP Points</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X24mos_Performance_Expectation__c</fullName>
        <label>24mos Performance Expectation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grow</fullName>
                </value>
                <value>
                    <fullName>Maintain</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dealer Segmentation</label>
    <nameField>
        <displayFormat>SEG-{000000}</displayFormat>
        <label>Dealer Segmentation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Segmentations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>